# moneyforward-mcp-server

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  accounts.yaml.example  pyproject.toml
.claude/rules/: moneyforward-manual-accounts.md
docs/: PRP.md
research/: technical_research.md
spec/: implementation_plan.md
src/: config.py  selectors.yaml  server.py
src/browser/: __init__.py  auth.py  context.py  scraper.py
src/cache/: __init__.py  sqlite_cache.py
src/tools/: __init__.py  assets.py  budget.py  common.py  health.py  manual_accounts.py  refresh.py  transactions.py
tests/: __init__.py  test_cache.py  test_tools.py
